2001-10-11  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_bits.c (bk_bits_create): allocate a byte for zero bits

2001-10-10  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_bits.c (bk_bits_save): save 0 bits as "0" [distinct from "00"]
	(bk_bits_restore): restore "0" as 0 bits [allocate a byte anyhow]

2001-09-30  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_run.c: Initial baka run environment

2001-09-29  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_STRING_QUOTE_NULLOK): allow NULL char *
	(BK_NULLSTR): string placeholder for NULL

	* lib/b_bits.c (bk_bits_save): decrement size by 8 bits per char
	(bk_bits_restore): size (in bits) is 4*strlen(x)

	* lib/b_string.c (bk_string_tokenize_split): avoid segv for default ws
	(bk_string_quote): generate NULL for NULL, if ok

2001-09-25  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_include.h: include winsock.h, process.h, instead
	of various unix-specific include files

	* include/libbk_oscompat.h: typedefs and #defines to work with mingw

	* lib/b_general.c (bk_general_init): no openlog() call on windows
	(bk_general_vsyslog): no syslog() calls on windows

	* test/test_stringconv.c: avoid name/type clashes with int32/uint32

2001-09-18  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_config.c (bk_config_init): failure of load_config_from_file
	is non-fatal, and does not cause destruction of bk_config struct

2001-09-17  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_GENERAL_FLAGS): avoid Linux gcc warnings
	about signed vs. unsigned

	* lib/b_general.c: avoid Linux gcc warnings about signed vs. unsigned

2001-09-11  Seth Robertson  <seth@yeah.baka.org>

	* include/libbk_oscompat.h: Move NULL/MAX/MIN issues to oscompat.

2001-09-11    <dupuy@cs.columbia.edu>

	* lib/b_debug.c (bk_debug_iprint): avoid Unix dependency here too

	also cleanup unneeded /**/ for string concatenation

2001-09-10  Alexander Dupuy  <dupuy@cs.columbia.edu>
